# SimpleSimulation

./: CMakeLists.txt  TODO.txt  config.json  copy_assets.bat  run_cmake.bat
assets/Box2D-master/Box2D/Box2D/: CMakeLists.txt
assets/jsoncpp-dist/: CMakeLists.txt
source/: ActionMachine.cpp  ActionMachine.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  FitnessFunction.cpp  FitnessFunction.h  GAMember.cpp  GAMember.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  IRoboSimulationModel.h  IRobotController.h  Layer.cpp  Layer.h  ManualRoboSimulationModel.cpp  ManualRoboSimulationModel.h  MotorNeuralNetwork.cpp  MotorNeuralNetwork.h  NNRoboSimulationModel.h  NeuralNetwork.cpp  NeuralNetwork.h  RandomGenerator.cpp  RandomGenerator.h  RoboParts.h  RoboSimulationModelBase.cpp  RoboSimulationModelBase.h  RoboSimulationView.cpp  RoboSimulationView.h  RobotSimulation.cpp  RobotSimulation.h  Shapes.h  SigmoidLayer.cpp  SigmoidLayer.h  Simulation.cpp  Simulation.h  TestSimulation.cpp  TestSimulation.h  main.cpp
